Use Java 8 method